<resources>
    <string name="app_name">PawnIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_listings">My Listings</string>
    <string name="my_pawns">My Pawns</string>
    <string name="history">History</string>
    <string name="user_settings">User Settings</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="home">Home</string>
    <string name="second_hand">Second Hand</string>
    <string name="auctionListings">Auctions</string>
    <string name="pawn">Pawn</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="market">Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>