<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/login" />
                <item
                    android:id="@+id/my_listings"
                    android:icon="@drawable/ic_mylistings"
                    android:title="@string/my_listings" />
                <item
                    android:id="@+id/my_pawns"
                    android:icon="@drawable/ic_pwn"
                    android:title="@string/my_pawns" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>

    </group>
</menu>